# PasteIt

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  eslint.config.ts  index.html  package.json  template.docker-compose.yml  template.env  tsconfig.json  unused.biome.json  vite.config.ts
dbinit/: 0000_create_pasteit_db.sql
src/client/: routeTree.gen.ts  styles.css  tanstack.tsx  theme.ts
src/client/components/: CodeEditor.tsx  Footer.tsx  Header.tsx
src/client/hooks/: codeHighlitghting.ts  recaptcha.ts
src/client/routes/: $pasteId.tsx  __root.tsx  index.tsx
src/server/: main.rs
src/server/routes/: mod.rs  pastes.rs
src/server/utils/: appstate.rs  cors.rs  cryptography.rs  database_config.rs  mod.rs  net_utils.rs  swagger.rs
