[package]
name = "pasteit"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "pasteit"
path = "src/server/main.rs"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.1", features = ["default", "multipart", "json", "tokio"] }
bs62 = "0.1.4"
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = { version = "0.14.1" , features = ["serde", "rt_tokio_1"]}
dotenvy = "0.15.7"
hex = "0.4.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "tokio"] }
reqwest = { version = "0.13.2", features = ["form", "json"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.11.0"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest", "vendored"] }
